<resources>
    <string name="app_name">Newsfeed</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="author">Author</string>
    <string name="date">31 March 1996</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="detailed_news">Detailed News</string>
    <string name="news_subtitle">News Subtitle</string>
    <string name="news_title">News Title</string>
</resources>
