<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="img"
                android:scaleType="centerCrop"
                tools:ignore="UnusedAttribute"/>

            <ImageView
                android:id="@+id/shadow_bottom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/bottom_shadow"
                android:layout_alignBottom="@+id/img"/>

            <ProgressBar
                android:id="@+id/imageProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:layout_marginRight="160dp"
                android:text="@string/author"
                android:gravity="bottom"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignRight="@+id/layoutDate"
                android:layout_alignTop="@+id/layoutDate"
                android:layout_alignEnd="@+id/layoutDate"/>

            <FrameLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:background="@drawable/round_white"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-50dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_date"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"/>

                <TextView
                    android:id="@+id/publishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#606060"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="12dp"/>

            </FrameLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/img"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/description"
                android:layout_below="@id/title"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/source"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:fontFamily="sans-serif-light"
                android:layout_below="@id/description"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:drawablePadding="8dp"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/time"
                android:maxLines="1"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:layout_below="@id/description"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/source"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>